--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <title>Body Sport Tech</title>
@@ -55,52 +56,6 @@
             <h1>
                 BODY SPORT TECH
             </h1>
-        </section>
-        <section class="esportes">
-            <ul>
-                <li>
-                    <img src="imagem/boneco_capoeira.png" alt="Boneco Capoeira">
-                    <p>
-                        Capoeira
-                    </p>
-                </li>
-                <li>
-                    <img class="ciclista" src="imagem/Vector.png" alt="Ciclista">
-                    <p>
-                        Ciclismo
-                    </p>
-                </li>
-                <li>
-                    <img class="natacao" src="imagem/Vector (1).png" alt="Natação">
-                    <p>
-                        Natação
-                    </p>
-                </li>
-                <li>
-                    <img class="handebol" src="imagem/boneco_handebol.png" alt="Boneco Handebol">
-                    <p>
-                        Handebol
-                    </p>
-                </li>
-                <li>
-                    <img src="imagem/Vector (2).png" alt="Bola de Vôlei">
-                    <p>
-                        Vôlei
-                    </p>
-                </li>
-                <li>
-                    <img src="imagem/Vector (3).png" alt="Bola de Futebol">
-                    <p>
-                        Futebol
-                    </p>
-                </li>
-                <li>
-                    <img src="imagem/Vector (4).png" alt="Bola de Basquete">
-                    <p>
-                        Basquete
-                    </p>
-                </li>
-            </ul>
         </section>
         <section class="body">
             <h2>
@@ -312,41 +267,41 @@
                 bodysporttech@gmail.com
             </p>
             <p>
-                Body Sport Tech © 2025. Todos os direitos reservados. 
+                Body Sport Tech © 2025. Todos os direitos reservados.
             </p>
         </div>
         <div class="esporte">
             <nav>
-            <ul>
-                <li>
-                    <a href="#">Sobre o Projeto</a>
-                </li>
-                <li>
-                    <a href="#">Futebol</a>
-                </li>
-                <li>
-                    <a href="#">Capoeira</a>
-                </li>
-                <li>
-                    <a href="#">Natação</a>
-                </li>
-                <li>
-                    <a href="#">Handebol</a>
-                </li>
-                <li>
-                    <a href="#"> Basquete</a>
-                </li>
-                <li>
-                    <a href="#">Vôlei</a>
-                </li>
-                <li>
-                    <a href="#">Ciclismo</a>
-                </li>
-                <li>
-                    <a href="#"> Alimentação</a>
-                </li>
-            </ul>
-        </nav>
+                <ul>
+                    <li>
+                        <a href="#">Sobre o Projeto</a>
+                    </li>
+                    <li>
+                        <a href="#">Futebol</a>
+                    </li>
+                    <li>
+                        <a href="#">Capoeira</a>
+                    </li>
+                    <li>
+                        <a href="#">Natação</a>
+                    </li>
+                    <li>
+                        <a href="#">Handebol</a>
+                    </li>
+                    <li>
+                        <a href="#"> Basquete</a>
+                    </li>
+                    <li>
+                        <a href="#">Vôlei</a>
+                    </li>
+                    <li>
+                        <a href="#">Ciclismo</a>
+                    </li>
+                    <li>
+                        <a href="#"> Alimentação</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </footer>
 </body>
