--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Hammersmith+One&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <title>Body Sport Tech</title>
@@ -74,7 +76,7 @@
             </h3>
             <ul>
                 <li>
-                    <img src="imagem/Mask group.png" alt="Jogador de Basquete">
+                    <img src="imagem/image 7.png" alt="Jogador de Basquete">
                     <h4>
                         Basquete
                     </h4>
@@ -86,7 +88,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/image 92.png" alt="Capoerista">
+                    <img src="imagem/image 34.png" alt="Capoerista">
                     <h4>
                         Capoeira
                     </h4>
@@ -98,7 +100,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/Frame 16.png" alt="Jogador de Handebol">
+                    <img src="imagem/image 89.png" alt="Jogador de Handebol">
                     <h4>
                         Handebol
                     </h4>
@@ -110,7 +112,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/Mask group (1).png" alt="Alimentos">
+                    <img src="imagem/image 11.png" alt="Alimentos">
                     <h4>
                         Alimentação
                     </h4>
@@ -178,9 +180,9 @@
             <p>
                 Nossa abordagem única combina tecnologia, conhecimento científico e paixão pelo esporte
             </p>
-            <ul>
+            <ul class="cards">
                 <li>
-                    <img src="imagem/heart.png" alt="Coração">
+                    <div class="icon"><img src="imagem/heart.png" alt="Coração"></div>
                     <h3>
                         Bem-Estar Completo
                     </h3>
@@ -190,7 +192,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/people.png" alt="Pessoas">
+                    <div class="icon"><img src="imagem/people.png" alt="Pessoas"></div>
                     <h3>
                         Conheça-nos
                     </h3>
@@ -200,7 +202,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/alvo.png" alt="Alvo">
+                    <div class="icon"><img src="imagem/alvo.png" alt="Alvo"></div>
                     <h3>
                         Objetivos Personalizados
                     </h3>
@@ -209,7 +211,7 @@
                     </p>
                 </li>
                 <li>
-                    <img src="imagem/rain.png" alt="Raio">
+                    <div class="icon"><img src="imagem/rain.png" alt="Raio"></div>
                     <h3>
                         Resultados Rápidos
                     </h3>
@@ -223,19 +225,31 @@
             <h2>
                 Se quiser saber mais sobre a importância dos exercícios físicos na saúde mental, assista o vídeo abaixo:
             </h2>
-            <video src=""></video>
+            <ul class="fundo">
+                <li>
+                    <video controls>
+                        <source src="imagem/saude_mental.mp4" type="video/mp4">
+                    </video>
+                </li>
+            </ul>
+
             <div>
-                <h3>
-                    Você Sabia Que:
-                </h3>
-                <p>
-                    A atividade física é algo que todos nós praticamos no dia a dia? Mesmo de forma involuntária como
-                    caminhar para chegar a algum lugar ou como se movimentar pela casa para pegar algo ou para limpá-la.
-                    As vezes nem reparamos que coisas tão "pequenas" como essas, são atividades físicas que vocẽ faz por
-                    você estar se movimentando mesmo que seja um pouco.
-                </p>
-            </div>
-            <div>
+                <ul>
+                    <li>
+                        <h3>
+                            Você Sabia Que:
+                        </h3>
+                        <p>
+                            A atividade física é algo que todos nós praticamos no dia a dia? Mesmo de forma involuntária
+                            como
+                            caminhar para chegar a algum lugar ou como se movimentar pela casa para pegar algo ou para
+                            limpá-la.
+                            As vezes nem reparamos que coisas tão "pequenas" como essas, são atividades físicas que vocẽ
+                            faz por
+                            você estar se movimentando mesmo que seja um pouco.
+                        </p>
+                    </li>
+                </ul>
                 <img src="imagem/black-woman-laugh-happy-with-slam-ball-studio-white-background-fitness-exercise-health-female-person-smile-confident-with-workout-progress-results-wellness_590464-368558-removebg-preview(1) 1.png"
                     alt="Mulher">
             </div>
