atualização -  links e bibliografia

--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
         <nav class="menu-lateral">
             <ul>
                 <li>
-                    <a href="#">Sobre o Projeto</a>
-                </li>
-                <li>
-                    <a href="#">Futebol</a>
+                    <a href="futebol.html">Futebol</a>
                 </li>
                 <li>
                     <a href="#">Capoeira</a>
@@ -41,13 +38,19 @@
                     <a href="#"> Basquete</a>
                 </li>
                 <li>
-                    <a href="#">Vôlei</a>
+                    <a href="volei.html">Vôlei</a>
                 </li>
                 <li>
                     <a href="#">Ciclismo</a>
                 </li>
                 <li>
                     <a href="#"> Alimentação</a>
+                </li>
+                <li>
+                    <a href="#">Sobre o Projeto</a>
+                </li>
+                <li>
+                    <a href="bibliografia.html">Bibliografia</a>
                 </li>
             </ul>
         </nav>
@@ -144,7 +147,7 @@
                         Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
                     </p>
                     <p>
-                        <a href="#">Saiba Mais</a>
+                        <a href="volei.html">Saiba Mais</a>
                     </p>
                 </li>
                 <li>
@@ -168,7 +171,7 @@
                         Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
                     </p>
                     <p>
-                        <a href="#">Saiba Mais</a>
+                        <a href="futebol.html">Saiba Mais</a>
                     </p>
                 </li>
             </ul>
@@ -291,7 +294,7 @@
                         <a href="#">Sobre o Projeto</a>
                     </li>
                     <li>
-                        <a href="#">Futebol</a>
+                        <a href="futebol.html">Futebol</a>
                     </li>
                     <li>
                         <a href="#">Capoeira</a>
@@ -306,7 +309,7 @@
                         <a href="#"> Basquete</a>
                     </li>
                     <li>
-                        <a href="#">Vôlei</a>
+                        <a href="volei.html">Vôlei</a>
                     </li>
                     <li>
                         <a href="#">Ciclismo</a>
