--- a/volei.html
+++ b/volei.html
@@ -17,11 +17,11 @@
         </button>
         <nav class="menu-lateral">
             <ul>
+               <li>
+                <a href="index.html">Menu Principal</a>
+               </li>
                 <li>
-                    <a href="#">Sobre o Projeto</a>
-                </li>
-                <li>
-                    <a href="#">Futebol</a>
+                    <a href="futebol.html">Futebol</a>
                 </li>
                 <li>
                     <a href="#">Capoeira</a>
@@ -36,13 +36,19 @@
                     <a href="#"> Basquete</a>
                 </li>
                 <li>
-                    <a href="#">Vôlei</a>
+                    <a href="volei.html">Vôlei</a>
                 </li>
                 <li>
                     <a href="#">Ciclismo</a>
                 </li>
                 <li>
                     <a href="#"> Alimentação</a>
+                </li>
+                 <li>
+                    <a href="#">Sobre o Projeto</a>
+                </li>
+                <li>
+                    <a href="bibliografia.html">Bibliografia</a>
                 </li>
             </ul>
         </nav>
