--- a/futebol.html
+++ b/futebol.html
@@ -189,6 +189,38 @@
                 </ul>
             </div>
         </section>
+        <section class="alimentacao">
+            <h2>
+                Alimentação e Hidratação
+            </h2>
+            <ul>
+                <li>
+                    <p>
+                        <span>Pré-treino (1h antes):</span> carboidrato leve (pão integral, batata-doce, fruta) + café ou chá verde para energia.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        <span>Pós-treino:</span> whey com fruta ou refeição completa + isotônico em caso de muito suor.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Vitaminas e Suplementos
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Complexo B: energia.
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        Vitamina C: recuperação e imunidade.
+                    </p>
+                </li>
+            </ul>
+        </section>
         <section class="img">
             <div>
                 <img src="imagem/image 4.png" alt="">
