--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
         <nav class="menu-lateral">
             <ul>
                 <li>
+                <a href="index.html"><i class="fa-solid fa-house"></i>Página Inicial</a>
+            </li>
+                <li>
                     <a href="#">Sobre o Projeto</a>
                 </li>
                 <li>
                     <a href="#">Futebol</a>
                 </li>
                 <li>
-                    <a href="#">Capoeira</a>
+                    <a href="capoeira.html">Capoeira</a>
                 </li>
                 <li>
                     <a href="#">Natação</a>
@@ -96,7 +99,7 @@
                         Desenvolve altura, agilidade e precisão através de jogadas estratégicas.
                     </p>
                     <p>
-                        <a href="#">Saiba Mais</a>
+                        <a href="capoeira.html">Saiba Mais</a>
                     </p>
                 </li>
                 <li>
@@ -232,7 +235,8 @@
                     </video>
                 </li>
             </ul>
-
+        </section>
+        <section class="info">
             <div>
                 <ul>
                     <li>
@@ -256,12 +260,14 @@
         </section>
     </main>
     <footer>
-        <div class="redes">
+        <div class="conteiner">
+            <div class="redes">
             <h4>
                 Body Sport Tech
             </h4>
             <p>
-                Transformando vidas através do esporte e bem-estar. Sua jornada para uma vida mais saudável começa aqui.
+                Transformando vidas através do esporte e bem-estar. <br>
+                Sua jornada para uma vida mais saudável começa aqui.
             </p>
             <nav>
                 <p>
@@ -270,25 +276,18 @@
                 </p>
             </nav>
             <p>
-                Tecnologia e performance a serviço do seu corpo.
+                Tecnologia e performance <br>
+                a serviço do seu corpo.
             </p>
         </div>
-        <div class="contato">
-            <p>
-                Contato:
-            </p>
-            <p>
-                bodysporttech@gmail.com
-            </p>
-            <p>
-                Body Sport Tech © 2025. Todos os direitos reservados.
-            </p>
-        </div>
-        <div class="esporte">
+
+            <div class="esporte">
             <nav>
                 <ul>
                     <li>
-                        <a href="#">Sobre o Projeto</a>
+                        <h4>
+                            Esportes
+                        </h4>
                     </li>
                     <li>
                         <a href="#">Futebol</a>
@@ -317,6 +316,20 @@
                 </ul>
             </nav>
         </div>
+        </div>
+        
+        <div class="contato">
+            <p>
+                Contato:
+            </p>
+            <p>
+                bodysporttech@gmail.com
+            </p>
+            <p>
+                Body Sport Tech © 2025. Todos os direitos reservados.
+            </p>
+        </div>
+        
     </footer>
 </body>
 <script src="script.js"></script>
