atualização de coisinhas

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -20,13 +20,13 @@
         <nav class="menu-lateral">
             <ul>
                 <li>
-                    <a href="index.html">Menu Principal</a>
+                <a href="index.html"><i class="fa-solid fa-house"></i>Página Inicial</a>
                 </li>
                 <li>
                     <a href="futebol.html">Futebol</a>
                 </li>
                 <li>
-                    <a href="#">Capoeira</a>
+                    <a href="capoeira.html">Capoeira</a>
                 </li>
                 <li>
                     <a href="#">Natação</a>
@@ -48,6 +48,9 @@
                 </li>
                 <li>
                     <a href="#">Sobre o Projeto</a>
+                </li>
+                <li class="atual">
+                    <a href="bibliografia.html">Bibliografia</a>
                 </li>
             </ul>
         </nav>
