--- a/capoeira.html
+++ b/capoeira.html
@@ -26,12 +26,9 @@
                     <a href="index.html"><i class="fa-solid fa-house"></i>Página Inicial</a>
                 </li>
                 <li>
-                    <a href="#">Sobre o Projeto</a>
+                    <a href="futebol.html">Futebol</a>
                 </li>
-                <li>
-                    <a href="#">Futebol</a>
-                </li>
-                <li>
+                <li class="atual">
                     <a href="capoeira.html">Capoeira</a>
                 </li>
                 <li>
@@ -44,13 +41,19 @@
                     <a href="#"> Basquete</a>
                 </li>
                 <li>
-                    <a href="#">Vôlei</a>
+                    <a href="volei.html">Vôlei</a>
                 </li>
                 <li>
                     <a href="#">Ciclismo</a>
                 </li>
                 <li>
                     <a href="#"> Alimentação</a>
+                </li>
+                <li>
+                    <a href="#">Sobre o Projeto</a>
+                </li>
+                <li>
+                    <a href="bibliografia.html">Bibliografia</a>
                 </li>
             </ul>
         </nav>
