--- a/futebol.html
+++ b/futebol.html
@@ -20,13 +20,13 @@
         <nav class="menu-lateral">
             <ul>
                 <li>
-                    <a href="index.html">Menu Principal</a>
+                <a href="index.html"><i class="fa-solid fa-house"></i>Página Inicial</a>
                 </li>
-                <li>
+                <li class="atual">
                     <a href="futebol.html">Futebol</a>
                 </li>
                 <li>
-                    <a href="#">Capoeira</a>
+                    <a href="capoeira.html">Capoeira</a>
                 </li>
                 <li>
                     <a href="#">Natação</a>
@@ -48,6 +48,9 @@
                 </li>
                  <li>
                     <a href="#">Sobre o Projeto</a>
+                </li>
+                <li>
+                    <a href="bibliografia.html">Bibliografia</a>
                 </li>
             </ul>
         </nav>
@@ -127,62 +130,62 @@
                     <li>
                         <p>
                             Agachamento: fortalece pernas e core, para impulsão e estabilidade.
-                            <img src="" alt="">
+                            <img src="imagem/image 65.png" alt="Imagem agachamento.">
                         </p>
 
                     </li>
                     <li>
                         <p>
                             Levantamento Terra: trabalha diversos grupos musculares.
-                            <img src="" alt="">
+                            <img src="imagem/image 66.png" alt="Imagem levantamento terra">
                         </p>
 
                     </li>
                     <li>
                         <p>
                             Mesa Flexora: fortalece os músculos posteriores da coxa.
-                            <img src="" alt="">
+                            <img src="imagem/image 67.png" alt="Imagem mesa flexora">
                         </p>
                     </li>
                     <li>
                         <p>
                             Stiff: trabalha posteriores e glúteos.
-                            <img src="" alt="">
+                            <img src="imagem/image 68.png" alt="Imagem stiff">
                         </p>
 
                     </li>
                     <li>
                         <p>
                             Flexões: fortalecem peito, ombros e tríceps.
-                            <img src="" alt="">
+                            <img src="imagem/image 69.png" alt="Imagem flexão">
                         </p>
 
                     </li>
                     <li>
                         <p>
                             Panturrilha: melhora impulsão.
-                            <img src="" alt="">
+                            <img src="imagem/image 70.png" alt="Imagem barra de pesagem">
                         </p>
 
                     </li>
                     <li>
                         <p>
                             Prancha: fortalece o core e melhora a estabilidade.
-                            <img src="" alt="">
+                            <img src="imagem/image 74.png" alt="Imagem prancha - exercício">
                         </p>
 
                     </li>
                     <li>
                         <p>
                             Levantamento Unilateral: força e equilíbrio de forma unilateral.
-                            <img src="" alt="">
+                            <img src="imagem/image 72.png" alt="Imagem levantamento unilateral">
                         </p>
 
                     </li>
                     <li>
                         <p>
                             Ponte: trabalha glúteos e core.
-                            <img src="" alt="">
+                            <img src="imagem/image 73.png" alt="Imagem ponte - exercício">
                         </p>
 
                     </li>
