--- a/index.html
+++ b/index.html
@@ -22,18 +22,11 @@
         </button>
         <nav class="menu-lateral">
             <ul>
-                <li>
-<<<<<<< HEAD
-                <a href="index.html"><i class="fa-solid fa-house"></i>Página Inicial</a>
-            </li>
-                <li>
-                    <a href="#">Sobre o Projeto</a>
+                <li class="atual">
+                    <a href="index.html"><i class="fa-solid fa-house"></i>Página Inicial</a>
                 </li>
                 <li>
-                    <a href="#">Futebol</a>
-=======
                     <a href="futebol.html">Futebol</a>
->>>>>>> 39b83ed7f4071a11a66a625214a025cb297be2a8
                 </li>
                 <li>
                     <a href="capoeira.html">Capoeira</a>
@@ -198,20 +191,10 @@
                     <div class="icon"><img src="imagem/heart.png" alt="Coração"></div>
                     <h3>
                         Bem-Estar Completo
-                    z</h3>
+                    </h3>
                     <p>
                         Cuidamos da sua saúde física e mental através de práticas esportivas equilibradas e
                         sustentáveis.
-                    </p>
-                </li>
-                <li>
-                    <div class="icon"><img src="imagem/people.png" alt="Pessoas"></div>
-                    <h3>
-                        Conheça-nos
-                    </h3>
-                    <p>
-                        Surgimos para ajudar você a cuidar da saúde física, promovendo bem-estar, equilíbrio e qualidade
-                        de vida.
                     </p>
                 </li>
                 <li>
@@ -230,6 +213,16 @@
                     </h3>
                     <p>
                         Metodologias comprovadas que aceleram seus resultados de forma saudável e duradoura.
+                    </p>
+                </li>
+                <li>
+                    <div class="icon"><img src="imagem/people.png" alt="Pessoas"></div>
+                    <h3>
+                        Conheça-nos
+                    </h3>
+                    <p>
+                        Surgimos para ajudar você a cuidar da saúde física, promovendo bem-estar, equilíbrio e qualidade
+                        de vida.
                     </p>
                 </li>
             </ul>
@@ -272,62 +265,62 @@
     <footer>
         <div class="conteiner">
             <div class="redes">
-            <h4>
-                Body Sport Tech
-            </h4>
-            <p>
-                Transformando vidas através do esporte e bem-estar. <br>
-                Sua jornada para uma vida mais saudável começa aqui.
-            </p>
-            <nav>
+                <h4>
+                    Body Sport Tech
+                </h4>
                 <p>
-                    <a href="#"><span class="fa-brands fa-instagram"></span></a>
-                    <a href="#"><span class="fa-brands fa-twitter"></span></a>
+                    Transformando vidas através do esporte e bem-estar. <br>
+                    Sua jornada para uma vida mais saudável começa aqui.
                 </p>
-            </nav>
-            <p>
-                Tecnologia e performance <br>
-                a serviço do seu corpo.
-            </p>
-        </div>
+                <nav>
+                    <p>
+                        <a href="#"><span class="fa-brands fa-instagram"></span></a>
+                        <a href="#"><span class="fa-brands fa-twitter"></span></a>
+                    </p>
+                </nav>
+                <p>
+                    Tecnologia e performance <br>
+                    a serviço do seu corpo.
+                </p>
+            </div>
 
             <div class="esporte">
-            <nav>
-                <ul>
-                    <li>
-                        <h4>
-                            Esportes
-                        </h4>
-                    </li>
-                    <li>
-                        <a href="futebol.html">Futebol</a>
-                    </li>
-                    <li>
-                        <a href="#">Capoeira</a>
-                    </li>
-                    <li>
-                        <a href="#">Natação</a>
-                    </li>
-                    <li>
-                        <a href="#">Handebol</a>
-                    </li>
-                    <li>
-                        <a href="#"> Basquete</a>
-                    </li>
-                    <li>
-                        <a href="volei.html">Vôlei</a>
-                    </li>
-                    <li>
-                        <a href="#">Ciclismo</a>
-                    </li>
-                    <li>
-                        <a href="#"> Alimentação</a>
-                    </li>
-                </ul>
-            </nav>
+                <nav>
+                    <ul>
+                        <li>
+                            <h4>
+                                Esportes
+                            </h4>
+                        </li>
+                        <li>
+                            <a href="futebol.html">Futebol</a>
+                        </li>
+                        <li>
+                            <a href="#">Capoeira</a>
+                        </li>
+                        <li>
+                            <a href="#">Natação</a>
+                        </li>
+                        <li>
+                            <a href="#">Handebol</a>
+                        </li>
+                        <li>
+                            <a href="#"> Basquete</a>
+                        </li>
+                        <li>
+                            <a href="volei.html">Vôlei</a>
+                        </li>
+                        <li>
+                            <a href="#">Ciclismo</a>
+                        </li>
+                        <li>
+                            <a href="#"> Alimentação</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-        </div>
-        
+
         <div class="contato">
             <p>
                 Contato:
@@ -339,7 +332,7 @@
                 Body Sport Tech © 2025. Todos os direitos reservados.
             </p>
         </div>
-        
+
     </footer>
 </body>
 <script src="script.js"></script>
