--- a/volei.html
+++ b/volei.html
@@ -24,7 +24,7 @@
                     <a href="futebol.html">Futebol</a>
                 </li>
                 <li>
-                    <a href="#">Capoeira</a>
+                    <a href="capoeira.html">Capoeira</a>
                 </li>
                 <li>
                     <a href="#">Natação</a>
@@ -35,7 +35,7 @@
                 <li>
                     <a href="#"> Basquete</a>
                 </li>
-                <li>
+                <li class="atual">
                     <a href="volei.html">Vôlei</a>
                 </li>
                 <li>
