atualização mais coisinhas

--- a/bibliografia.html
+++ b/bibliografia.html
@@ -49,7 +49,7 @@
                 <li>
                     <a href="#">Sobre o Projeto</a>
                 </li>
-                <li class="atual">
+                <li>
                     <a href="bibliografia.html">Bibliografia</a>
                 </li>
             </ul>
@@ -57,12 +57,11 @@
     </header>
     <div class="background"></div>
     <main>
-        <section class="banner">
-            <img src="" alt="">
             <h1>
                 Bibliografia
             </h1>
-
+    </main>
+</section>
 </body>
 
 </html>
