--- a/capoeira.html
+++ b/capoeira.html
@@ -86,39 +86,8 @@
                 </div>
             </section>
             <section class="exercicio">
-                <div class="cards">
-                    <ul class="cards">
-                <li>
-                    <div class="icon"><img src="imagem/heart.png" alt="Coração"></div>
-                    <h3>
-                        Bem-Estar Completo
-                    </h3>
-                    <p>
-                        Cuidamos da sua saúde física e mental através de práticas esportivas equilibradas e
-                        sustentáveis.
-                    </p>
-                </li>
-                <li>
-                    <div class="icon"><img src="imagem/people.png" alt="Pessoas"></div>
-                    <h3>
-                        Conheça-nos
-                    </h3>
-                    <p>
-                        Surgimos para ajudar você a cuidar da saúde física, promovendo bem-estar, equilíbrio e qualidade
-                        de vida.
-                    </p>
-                </li>
-                <li>
-                    <div class="icon"><img src="imagem/alvo.png" alt="Alvo"></div>
-                    <h3>
-                        Objetivos Personalizados
-                    </h3>
-                    <p>
-                        Defina metas realistas e acompanhe seu progresso com ferramentas especializadas.
-                    </p>
-                </li>
-            </ul>
-                </div>
+                <h3>Exercícios para Pernas e Glúteos:</h3>
+                <p>Ginga: A ginga é o movimento base da capoeira e deve ser praticada com frequência.</p>
             </section>
     </main>
 </body>
