--- a/capoeira.html
+++ b/capoeira.html
@@ -26,31 +26,31 @@
                     <a href="index.html"><i class="fa-solid fa-house"></i>Página Inicial</a>
                 </li>
                 <li>
+                    <a href="projeto.html">Sobre o Projeto</a>
+                </li>
+                <li>
                     <a href="futebol.html">Futebol</a>
                 </li>
-                <li class="atual">
+                <li>
                     <a href="capoeira.html">Capoeira</a>
                 </li>
                 <li>
-                    <a href="#">Natação</a>
+                    <a href="natacao.html">Natação</a>
                 </li>
                 <li>
-                    <a href="#">Handebol</a>
+                    <a href="handebol.html">Handebol</a>
                 </li>
                 <li>
-                    <a href="#"> Basquete</a>
+                    <a href="#basquete.html"> Basquete</a>
                 </li>
                 <li>
                     <a href="volei.html">Vôlei</a>
                 </li>
                 <li>
-                    <a href="#">Ciclismo</a>
+                    <a href="ciclismo.html">Ciclismo</a>
                 </li>
                 <li>
-                    <a href="#"> Alimentação</a>
-                </li>
-                <li>
-                    <a href="#">Sobre o Projeto</a>
+                    <a href="alimentacao.html"> Alimentação</a>
                 </li>
                 <li>
                     <a href="bibliografia.html">Bibliografia</a>
@@ -58,6 +58,7 @@
             </ul>
         </nav>
     </header>
+    <div class="background"></div>
     <main>
         <section class="topo">
             <h1>Capoeira</h1>
@@ -80,9 +81,7 @@
                         A capoeira é muito mais que uma luta: é cultura, música e movimento.Essa prática fortalece os músculos, melhora a flexibilidade, a agilidade e o equilíbrio. Além de ser um ótimo exercício cardiovascular, ela também ajuda a desenvolver a expressão corporal e a coordenação motora.
                     </p>
                     </div>
-                    <div class="imagem">
-                        <img src="imagem/image 44.png" alt="Capoeristas">
-                    </div>
+                    
                 </div>
             </section>
             <section class="exercicio">
